--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "classnames": "^2.2.6",
     "gatsby": "^2.16.1",
+    "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.32",
     "gatsby-remark-images": "^3.1.28",
@@ -25,7 +26,8 @@
     "gatsby-transformer-remark": "^2.6.30",
     "node-sass": "^4.13.0",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "env-cmd": "^10.0.1",
