--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "classnames": "^2.2.6",
     "gatsby": "^2.16.1",
+    "gatsby-plugin-lodash": "^3.1.14",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.36",
@@ -24,6 +25,7 @@
     "gatsby-source-contentful": "^2.1.50",
     "gatsby-source-filesystem": "^2.1.33",
     "gatsby-transformer-remark": "^2.6.30",
+    "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
