--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-id-swiper": "^2.4.0",
+    "swiper": "^5.2.0"
   },
   "devDependencies": {
     "env-cmd": "^10.0.1",
