--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "classnames": "^2.2.6",
     "gatsby": "^2.16.1",
+    "gatsby-image": "^2.2.33",
     "gatsby-plugin-lodash": "^3.1.14",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
-    "gatsby-plugin-sharp": "^2.2.36",
+    "gatsby-plugin-sharp": "^2.3.2",
     "gatsby-remark-images": "^3.1.28",
     "gatsby-remark-relative-images": "^0.2.3",
+    "gatsby-sharp": "^1.0.0-alpha11-alpha.00fcfe90",
     "gatsby-source-contentful": "^2.1.50",
     "gatsby-source-filesystem": "^2.1.33",
     "gatsby-transformer-remark": "^2.6.30",
+    "gatsby-transformer-sharp": "^2.3.5",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
